# jlabx

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: config.md  environments.md  getting-started.md  index.mdx  requirements.md  usage.md
src/jlabx/: __init__.py
