[project]
name = "jlabx"
version = "0.1.0"
description = "Launch JupyterLab with extensions — no install, no config, just go"
requires-python = ">=3.10"
license = "MIT"
keywords = ["jupyterlab", "jupyter", "extensions", "uv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Jupyter :: JupyterLab",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/ianhi/jlabx"

[project.scripts]
jlabx = "jlabx:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
