[project]
name = "jlabx"
dynamic = ["version"]
description = "Launch JupyterLab with extensions — no install, no config, just go"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["jupyterlab", "jupyter", "extensions", "uv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Jupyter :: JupyterLab",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/ianhi/jlabx"
Documentation = "https://ianhi.github.io/jlabx/"

[project.scripts]
jlabx = "jlabx:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/jlabx/_version.py"
